misc: set z-index for admin post page fixed_button(#master)

--- a/pages/admin/post/post.module.scss
+++ b/pages/admin/post/post.module.scss
@@ -8,7 +8,7 @@
   position: fixed;
   right: 20px;
   top: 60px;
-  //   z-index: 10;
+  z-index: 2;
   width: auto;
   text-align: center;
 }
